Renaming test001 to ทกลองทำโพสต์ลง atom

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test001",
+  "name": "ทกลองทำโพสต์ลง atom",
   "theme": "syntax",
   "version": "0.1.0",
   "description": "A short description of your syntax theme",
