--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "ทกลองทำโพสต์ลง atom",
   "theme": "syntax",
   "version": "0.1.1",
-  "description": "A short description of your syntax theme",
+  "description": "ซื้อหวยออนไลน์ เว็บไหนดี RUAY จ่ายจริง จ่ายสูง",
   "keywords": [
-    "syntax",
-    "syntax",
-    "syntax",
-    "syntax",
-    "theme"
+    "ซื้อหวย",
+    "แทงหวย",
+    "RUAY",
+    "หวยออนไลน์",
+    "ซื้ซื้อหวยออนไลน์"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
