--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "แทงหวย",
     "RUAY",
     "หวยออนไลน์",
-    "ซื้อหวยออนไลน์"
+    "เว็บรวย"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
