--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RUAY buyhuay online",
+  "name": "RUAY001",
   "theme": "syntax",
   "version": "0.1.1",
   "description": "ซื้อหวยออนไลน์ เว็บไหนดี RUAY จ่ายจริง จ่ายสูง",
