--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "RUAY001",
   "theme": "syntax",
   "version": "0.2.0",
-  "description": "ซื้อหวยออนไลน์ เว็บไหนดี RUAY จ่ายจริง จ่ายสูง",
+  "description": "ซื้อหวยออนไลน์ เว็บไหนดี แทงหวยออนไลน์ เว็บ RUAY จ่ายจริง จ่ายสูง เข้ากลุ่มวางเลขแม่นๆฟรี",
   "keywords": [
     "ซื้อหวย",
     "แทงหวย",
