--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay001",
+  "name": "ซื้อหวยออนไลน์ เว็บ RUAY แทงหวยอันดับ 1",
   "theme": "syntax",
   "version": "0.4.1",
   "description": "ซื้อหวยออนไลน์ เว็บไหนดี แทงหวยออนไลน์ เว็บ RUAY จ่ายจริง จ่ายสูง เข้ากลุ่มวางเลขแม่นๆฟรี",
