--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ซื้อหวยออนไลน์ เว็บ RUAY แทงหวยอันดับ 1",
+  "name": "ruay002",
   "theme": "syntax",
   "version": "0.4.2",
-  "description": "ซื้อหวยออนไลน์ เว็บไหนดี แทงหวยออนไลน์ เว็บ RUAY จ่ายจริง จ่ายสูง เข้ากลุ่มวางเลขแม่นๆฟรี",
+  "description": "เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัยโอนง่ายจ่ายไวทุกยอด",
   "keywords": [
-    "ซื้อหวย",
-    "แทงหวย",
+    "เว็บซื้อหวย",
+    "สมัครแทงหวย",
     "RUAY",
     "หวยออนไลน์",
-    "เว็บรวย"
+    "แทงหวยออนไลน์"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
