Renaming ruay002 to เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัย

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay002",
+  "name": "เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัย",
   "theme": "syntax",
   "version": "0.5.0",
   "description": "เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัยโอนง่ายจ่ายไวทุกยอด",
