--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัย",
+  "name": "ruay003",
   "theme": "syntax",
   "version": "0.5.1",
-  "description": "เว็บหวยออนไลน์จ่ายจริง สมัครแทงหวยฟรีรับประกันความปลอดภัยโอนง่ายจ่ายไวทุกยอด",
+  "description": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมายที่น่าลงทุน",
   "keywords": [
     "เว็บซื้อหวย",
     "สมัครแทงหวย",
-    "RUAY",
-    "หวยออนไลน์",
-    "แทงหวยออนไลน์"
+    "ซื้อหวยออนไลน์",
+    "เว็บแทงหวยออนไลน์",
+    "แทงหวย"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
