--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay003",
+  "name": "r003auy",
   "theme": "syntax",
   "version": "0.6.0",
   "description": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมายที่น่าลงทุน",
