--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมาย",
+  "name": "ruay181065",
   "theme": "syntax",
   "version": "0.7.1",
   "description": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมายที่น่าลงทุน",
   "keywords": [
-    "เว็บซื้อหวย",
-    "สมัครแทงหวย",
-    "ซื้อหวยออนไลน์",
-    "เว็บแทงหวยออนไลน์",
-    "แทงหวย"
+    "หวยยี่กี ruay",
+    "สมัครแทงหวยยี่กี",
+    "ซื้อหวยยี่กี",
+    "หวยยี่กี",
+    "แทงหวยยี่กี"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
