--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay181065",
+  "name": "หวยยี่กี ruay สร้างความรวยกับเว็บแทงหวยออนไลน์ต้องเว็บ RUAY",
   "theme": "syntax",
   "version": "0.8.0",
   "description": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมายที่น่าลงทุน",
