--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "หวยยี่กี ruay สร้างความรวยกับเว็บแทงหวยออนไลน์ต้องเว็บ RUAY",
+  "name": "ruay211065",
   "theme": "syntax",
   "version": "0.8.6",
-  "description": "เว็บหวยออนไลน์อันดับ1 2566 เว็บแทงหวยออนไลน์ถูกกฎหมายที่น่าลงทุน",
+  "description": "เว็บซื้อหวยออนไลน์ น่าเชื่อถือ เดิมพันปลอดภัยได้กำไรจริงต้องมีคุณสมบัติเหล่านี้",
   "keywords": [
-    "หวยยี่กี ruay",
-    "สมัครแทงหวยยี่กี",
-    "ซื้อหวยยี่กี",
-    "หวยยี่กี",
-    "แทงหวยยี่กี"
+    "ซื้อหวยออนไลน์",
+    "สมัครแทงหวย",
+    "เว็บหวย",
+    "แทงหวยออนไลน์",
+    "เว็บแทงหวย"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
