Renaming ruay211065 to 7 อันดับ เว็บซื้อหวยออนไลน์ น่าเชื่อถือ

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay211065",
+  "name": "7 อันดับ เว็บซื้อหวยออนไลน์ น่าเชื่อถือ",
   "theme": "syntax",
   "version": "0.9.0",
   "description": "เว็บซื้อหวยออนไลน์ น่าเชื่อถือ เดิมพันปลอดภัยได้กำไรจริงต้องมีคุณสมบัติเหล่านี้",
