--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "7 อันดับ เว็บซื้อหวยออนไลน์ น่าเชื่อถือ",
+  "name": "ruay231065",
   "theme": "syntax",
   "version": "0.9.1",
-  "description": "เว็บซื้อหวยออนไลน์ น่าเชื่อถือ เดิมพันปลอดภัยได้กำไรจริงต้องมีคุณสมบัติเหล่านี้",
+  "description": "แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง ซื้อง่าย สมัครเสร็จแทงได้ทันที",
   "keywords": [
     "ซื้อหวยออนไลน์",
     "สมัครแทงหวย",
