Renaming ruay231065 to แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay231065",
+  "name": "แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง",
   "theme": "syntax",
   "version": "0.10.0",
   "description": "แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง ซื้อง่าย สมัครเสร็จแทงได้ทันที",
