--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง",
+  "name": "ruay004",
   "theme": "syntax",
   "version": "0.10.1",
-  "description": "แทงหวยออนไลน์ จ่ายจริง จ่ายแพง แทงได้ 24 ชั่วโมง ซื้อง่าย สมัครเสร็จแทงได้ทันที",
+  "description": "แทงหวย24 จ่ายจริงไหม บริการรับแทงหวย24ชั่วโมง สามารถสมัครเว็บหวย24 ได้ที่นี่ จ่ายจริงแน่นอน พร้อมเข้ากลุ่มวางเลข",
   "keywords": [
-    "ซื้อหวยออนไลน์",
-    "สมัครแทงหวย",
+    "ซื้อหวยออนไลน์ 24 ชั่วโมง",
+    "สมัครแทงหวย24",
     "เว็บหวย",
-    "แทงหวยออนไลน์",
-    "เว็บแทงหวย"
+    "แทงหวย24",
+    "เว็บแทงหวย24"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
