Renaming Ruay77004 to แทงหวย24 จ่ายจริงไหม สมัครสมาชิก24

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ruay77004",
+  "name": "แทงหวย24 จ่ายจริงไหม สมัครสมาชิก24",
   "theme": "syntax",
   "version": "0.11.0",
   "description": "แทงหวย24 จ่ายจริงไหม บริการรับแทงหวย24ชั่วโมง สามารถสมัครเว็บหวย24 ได้ที่นี่ จ่ายจริงแน่นอน พร้อมเข้ากลุ่มวางเลข",
