--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "แทงหวย24 จ่ายจริงไหม สมัครสมาชิก24",
+  "name": "RUAY71165",
   "theme": "syntax",
   "version": "0.11.1",
-  "description": "แทงหวย24 จ่ายจริงไหม บริการรับแทงหวย24ชั่วโมง สามารถสมัครเว็บหวย24 ได้ที่นี่ จ่ายจริงแน่นอน พร้อมเข้ากลุ่มวางเลข",
+  "description": "ซื้อหวยฮานอย เว็บไหนดี วิธีการเลือกเว็บแทงหวยฮานอยออนไลน์ เว็บจ่ายจริง ฝาก-ถอน รวดเร็ว",
   "keywords": [
-    "ซื้อหวยออนไลน์ 24 ชั่วโมง",
-    "สมัครแทงหวย24",
-    "เว็บหวย",
-    "แทงหวย24",
-    "เว็บแทงหวย24"
+    "ซื้อหวยฮานอยออนไลน์",
+    "หวยฮานอย",
+    "แทงหวยฮานอย",
+    "ซื้อหวยฮานอย",
+    "เว็บซื้อยหวยฮานอย"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
