--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RUAY71165",
+  "name": "ซื้อหวยฮานอย เว็บไหนดี รีวิว 5 อันดับ",
   "theme": "syntax",
   "version": "0.12.0",
   "description": "ซื้อหวยฮานอย เว็บไหนดี วิธีการเลือกเว็บแทงหวยฮานอยออนไลน์ เว็บจ่ายจริง ฝาก-ถอน รวดเร็ว",
