--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ซื้อหวยฮานอย เว็บไหนดี รีวิว 5 อันดับ",
+  "name": "RUAY81165",
   "theme": "syntax",
   "version": "0.12.1",
-  "description": "ซื้อหวยฮานอย เว็บไหนดี วิธีการเลือกเว็บแทงหวยฮานอยออนไลน์ เว็บจ่ายจริง ฝาก-ถอน รวดเร็ว",
+  "description": "ซื้อหวยหุ้นออนไลน์ เว็บไหนดี 5 อันดับ เว็บแทงหวยหุ้น จ่ายจริง",
   "keywords": [
-    "ซื้อหวยฮานอยออนไลน์",
-    "หวยฮานอย",
-    "แทงหวยฮานอย",
-    "ซื้อหวยฮานอย",
-    "เว็บซื้อยหวยฮานอย"
+    "ซื้อหวยหุ้นออนไลน์",
+    "หวยหุ้น",
+    "แทงหวยหุ้น",
+    "ซื้อหวยหุ้น",
+    "เว็บซื้อยหวยหุ้น"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
