--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RUAY81165",
+  "name": "รีวิว 5 อันดับ ซื้อหวยหุ้นออนไลน์ เว็บไหนดี",
   "theme": "syntax",
   "version": "0.13.0",
   "description": "ซื้อหวยหุ้นออนไลน์ เว็บไหนดี 5 อันดับ เว็บแทงหวยหุ้น จ่ายจริง",
