--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "รีวิว 5 อันดับ ซื้อหวยหุ้นออนไลน์ เว็บไหนดี",
+  "name": "ruay101165",
   "theme": "syntax",
   "version": "0.13.2",
-  "description": "ซื้อหวยหุ้นออนไลน์ เว็บไหนดี 5 อันดับ เว็บแทงหวยหุ้น จ่ายจริง",
+  "description": "ซื้อหวยลาวออนไลน์ วันนี้ แทงหวยลาวกับเว็บไหนดี บอกได้เลยว่าต้อง RUAY เปิดให้บริการ 24 ชั่วโมง ดูวิธีซื้อหวยลาวได้ที่นี่",
   "keywords": [
-    "ซื้อหวยหุ้นออนไลน์",
-    "หวยหุ้น",
-    "แทงหวยหุ้น",
-    "ซื้อหวยหุ้น",
-    "เว็บซื้อยหวยหุ้น"
+    "ซื้อหวยลาวออนไลน์",
+    "หวยลาว",
+    "แทงหวยลาว",
+    "ซื้อหวยลาว",
+    "เว็บซื้อยหวยลาว"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
