Renaming ruay101165 to ซื้อหวยลาวออนไลน์ วันนี้ เข้ากลุ่มวางเลขฟรี

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ruay101165",
+  "name": "ซื้อหวยลาวออนไลน์ วันนี้ เข้ากลุ่มวางเลขฟรี",
   "theme": "syntax",
   "version": "0.14.0",
   "description": "ซื้อหวยลาวออนไลน์ วันนี้ แทงหวยลาวกับเว็บไหนดี บอกได้เลยว่าต้อง RUAY เปิดให้บริการ 24 ชั่วโมง ดูวิธีซื้อหวยลาวได้ที่นี่",
