--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "ซื้อหวยลาวออนไลน์ วันนี้ เข้ากลุ่มวางเลขฟรี",
+  "name": "ruay161165",
   "theme": "syntax",
   "version": "0.14.1",
-  "description": "ซื้อหวยลาวออนไลน์ วันนี้ แทงหวยลาวกับเว็บไหนดี บอกได้เลยว่าต้อง RUAY เปิดให้บริการ 24 ชั่วโมง ดูวิธีซื้อหวยลาวได้ที่นี่",
+  "description": "5hengs เว็บแทงหวยที่ดีที่สุด จ่ายจริง ไม่โกง บริการ 24 ชั่วโมง มีให้ซื้อได้ทุกหวยต้อง 5เฮง",
   "keywords": [
-    "ซื้อหวยลาวออนไลน์",
-    "หวยลาว",
-    "แทงหวยลาว",
-    "ซื้อหวยลาว",
-    "เว็บซื้อยหวยลาว"
+    "5hengs",
+    "เว็บหวย 5hengs",
+    "แทงหวยออนไลน ์5hengs",
+    "ซื้อหวย 5hengs",
+    "เว็บซื้อหวย 5 hengs"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
