--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "5heng เว็บซื้อหวยออนไลน์ น่าเชื่อถือ Top10",
+  "name": "77betthai001",
   "theme": "syntax",
   "version": "0.15.2",
-  "description": "5hengs เว็บแทงหวยที่ดีที่สุด จ่ายจริง ไม่โกง บริการ 24 ชั่วโมง มีให้ซื้อได้ทุกหวยต้อง 5เฮง",
+  "description": "คาสิโนออนไลน์ เกมไพ่ ปั่นสล็อต แทงบอล เกมยิงปลา ทั้งหมดครบในที่เดียว 77betthai คาสิโนมาแรง สมัครวันนี้รับเครดิตฟรี",
   "keywords": [
-    "5hengs",
-    "เว็บหวย 5hengs",
-    "แทงหวยออนไลน ์5hengs",
-    "ซื้อหวย 5hengs",
-    "เว็บซื้อหวย 5 hengs"
+    "คาสิโนออนไลน์",
+    "พนันออนไลน์",
+    "คาสิโนออนไลน์ เครดิตฟรี",
+    "77bet thai",
+    "เว็บพนันออนไลน์ตรง ไม่ผ่านเอเย่นต์"
   ],
   "repository": "https://github.com/rossarin168/test001",
   "license": "MIT",
