--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "77betthai001",
+  "name": "คาสิโนออนไลน์ 77bet thai เว็บพนันตรงอันดับ 1",
   "theme": "syntax",
   "version": "0.17.0",
   "description": "คาสิโนออนไลน์ เกมไพ่ ปั่นสล็อต แทงบอล เกมยิงปลา ทั้งหมดครบในที่เดียว 77betthai คาสิโนมาแรง สมัครวันนี้รับเครดิตฟรี",
